tweaks adjustments and whatever